--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="dollar_box">$</string>
     <string name="twodollar_box">$$</string>
     <string name="threedollar_box">$$$</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="listButton">List</string>
 </resources>
